--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;1,100;1,200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@1,700&display=swap');
+/*font-family: 'Source Serif Pro', serif;*/
+.top-heading{
+    font-weight: 700;
+    font-family: 'Source Serif Pro', serif;
+    
+}
 .home-bg{
     background-color: hsl(356, 100%, 66%);
     height: 430px;
@@ -180,6 +187,133 @@
 }
 .github>a:hover{
     color: hsl(356, 100%, 66%);
+}
+.mail{
+    width: max-content;
+    margin-left: 50px;
+}
+.ph{
+    width: max-content;
+    margin-left: 26px;
+}
+.github,.linkedin{
+    width: max-content;
+    margin-left: 70px;
+}
+
+@media screen and (max-width:576px) {
+
+    .home-bg{
+        background-color: hsl(356, 100%, 66%);
+        height: 480px;
+        width: auto;
+        border-bottom-left-radius: 200px;
+    }
+    .mine,.hi,.name,.role{
+        margin-left: 15px;
+        margin-top: 20px;
+    }
+    .name{
+        margin-top: 30px;
+    }
+    .role{
+        margin-top: 30px;
+    }
+    .frontend-image>img{
+        margin-left: 80px;
+        margin-top: 20px;
+        width: 200px;
+        height: 200px;
+    }
+    .scroll-btn{
+        font-size: 55px;
+        margin-left: 160px;
+        margin-top: 0px;
+    }
+    .heading{
+        margin-top: 90px;
+    }
+    .category{
+        font-size: 25px;
+    }
+    .inst{
+        font-size: 16px;
+    }
+    .marks{
+        font-size: 16px;
+    }
+    .coll{
+        font-size: 16px;
+    }
+    .category,.inst,.marks{
+        margin-left: 25px;
+        
+    }
+    .ssc,.hsc,.degree{
+        margin-top: 50px;
+    }
+    .top-heading{
+        margin-top: 15px;
+    }
+    .html,.css,.boot,.js{
+        width: 150px;
+        height: 100px;
+        margin-top: -20px;
+        margin-left: 80px;
+    }
+    .html>img,
+    .css>img,
+    .boot>img,
+    .js>img{
+        width: 80px;
+        height: 80px;
+        margin-top: -5px;
+        margin-left: 20px;
+    }
+    .css,.boot,.js{
+        margin-top: 120px;
+        margin-left: 80px;
+    }
+    .boot>img{
+        height: 60px;
+        width: 70px;
+        margin-top: 6px;
+        margin-left: 25px;
+    }
+    .js>img{
+        border-radius: 20px;
+
+    }
+    .landing{
+        text-align: center;
+    }
+    .para{
+        height: 300px;
+    }
+    .para>p{
+        font-size: 16px;
+        line-height: 25px;
+        text-indent: 10px;
+    }
+    .contact{
+        background-color: rgb(35, 56, 56);
+        height: 400px;
+    }
+    .mail{
+        width: max-content;
+        margin-left: 10px;
+    }
+    .ph{
+        width: max-content;
+        margin-left: 10px;
+    }
+    .github,.linkedin{
+        width: max-content;
+        margin-left: 10px;
+    }
+
+
+    
 }
 
 
